@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,17 +19,14 @@ import org.apache.spark.sql.Row;
 import org.apache.spark.sql.RowFactory;
 import org.junit.jupiter.api.Test;
 
-import sleeper.core.key.Key;
 import sleeper.core.partition.PartitionTree;
-import sleeper.core.partition.PartitionsFromSplitPoints;
+import sleeper.core.partition.PartitionsBuilder;
 import sleeper.core.schema.Field;
 import sleeper.core.schema.Schema;
 import sleeper.core.schema.type.IntType;
 import sleeper.core.schema.type.LongType;
 import sleeper.core.schema.type.StringType;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 
@@ -45,20 +42,18 @@ public class AddPartitionIteratorTest {
                 .sortKeyFields(new Field("sort", new LongType()))
                 .valueFields(new Field("value", new StringType()))
                 .build();
-        Row row1 = RowFactory.create(1, 2L, "3");
-        Row row2 = RowFactory.create(4, 5L, "6");
-        Iterator<Row> rows = Arrays.asList(row1, row2).iterator();
-        List<Object> splitPoints = Collections.singletonList(3);
-        PartitionsFromSplitPoints partitionsFromSplitPoints = new PartitionsFromSplitPoints(schema, splitPoints);
-        PartitionTree partitionTree = new PartitionTree(schema, partitionsFromSplitPoints.construct());
-        String partition1 = partitionTree.getLeafPartition(Key.create(1)).getId();
-        String partition2 = partitionTree.getLeafPartition(Key.create(4)).getId();
+        Iterator<Row> rows = List.of(
+                RowFactory.create(1, 2L, "3"),
+                RowFactory.create(4, 5L, "6")).iterator();
+        PartitionTree partitionTree = new PartitionsBuilder(schema).rootFirst("root")
+                .splitToNewChildren("root", "L", "R", 3)
+                .buildTree();
         AddPartitionIterator addPartitionIterator = new AddPartitionIterator(rows, schema, partitionTree);
 
         // When / Then
-        Row expectedRow1 = RowFactory.create(1, 2L, "3", partition1);
-        Row expectedRow2 = RowFactory.create(4, 5L, "6", partition2);
         assertThat(addPartitionIterator).toIterable()
-                .containsExactly(expectedRow1, expectedRow2);
+                .containsExactly(
+                        RowFactory.create(1, 2L, "3", "L"),
+                        RowFactory.create(4, 5L, "6", "R"));
     }
 }
